hphp/hack/test/typecheck/control_flow/do_while_finally.php.exp
File "do_while_finally.php", line 8, characters 7-8:
Variable `$a` is undefined, or not always defined. (Naming[2050])
