hphp/hack/test/typecheck/control_flow/do_while_finally.php
<?hh

function f(): void {
  do {
    $a = 1;
    try {
    } finally {
      $a;
    }
  } while (1 == 2);
}
